--- a/composer.json
+++ b/composer.json
@@ -19,5 +19,5 @@
   "autoload": {
     "psr-4": { "Alexhenriet\\Bundle\\CommonBundle\\": "" }
   },
-  "minimum-stability": "dev"
+  "minimum-stability": "stable"
 }
